Completed grid and Assimp bindings